tests/bad_programs/syntax_errors/funcall_on_bool_exp.notc
int main() {
    (true == true)(1, 2);
}
